<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical" tools:context=".WhoIsMyRepActivity">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView android:text="@string/enter_zip_code" android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/zip_code"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/zip_code_hint"
            android:inputType="text"
            android:imeOptions="actionSend"
            />
    </LinearLayout>
        <TextView android:text="@string/or_state_4rep" android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/state4rep"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/state_hint"
            android:inputType="text"
            android:imeOptions="actionSend"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView android:text="@string/or_rep_last_name" android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/last_name_rep"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name_rep_hint"
            android:inputType="text"
            android:imeOptions="actionSend"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView android:text="@string/or_state_4senator" android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/state4senator"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/state_hint"
            android:inputType="text"
            android:imeOptions="actionSend"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView android:text="@string/or_senator_last_name" android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/last_name_senator"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name_senator_hint"
            android:inputType="text"
            android:imeOptions="actionSend"/>
    </LinearLayout>

</LinearLayout>
